--- a/app/src/main/res/layout/activity_add_timer.xml
+++ b/app/src/main/res/layout/activity_add_timer.xml
@@ -66,7 +66,7 @@
             android:layout_weight="1"
             android:ems="10"
             android:gravity="center_horizontal"
-            android:hint="31/03/2021"
+            android:hint="DD/MM/YYY"
             android:inputType="date" />
     </LinearLayout>
 
@@ -98,7 +98,7 @@
             android:layout_weight="1"
             android:ems="10"
             android:gravity="center_horizontal"
-            android:hint="17:56"
+            android:hint="HH.MM"
             android:inputType="date" />
     </LinearLayout>
 
